relatorios/202120278/T5/compilador.txt
In file included from arvore.cpp:3:
arvore.cpp: In function ‘void C_A_T_C_H_T_E_S_T_0()’:
arvore.cpp:97:15: error: ‘struct Arvore<int>’ has no member named ‘vazio’
   97 |     REQUIRE(a.vazio() == true);
      |               ^~~~~
In file included from arvore.cpp:3:
arvore.cpp:97:15: error: ‘struct Arvore<int>’ has no member named ‘vazio’
   97 |     REQUIRE(a.vazio() == true);
      |               ^~~~~
arvore.cpp:97:15: error: ‘struct Arvore<int>’ has no member named ‘vazio’
   97 |     REQUIRE(a.vazio() == true);
      |               ^~~~~
In file included from arvore.cpp:3:
arvore.cpp: In function ‘void C_A_T_C_H_T_E_S_T_2()’:
arvore.cpp:105:15: error: ‘struct Arvore<int>’ has no member named ‘vazio’
  105 |     REQUIRE(a.vazio() == false);
      |               ^~~~~
In file included from arvore.cpp:3:
arvore.cpp:105:15: error: ‘struct Arvore<int>’ has no member named ‘vazio’
  105 |     REQUIRE(a.vazio() == false);
      |               ^~~~~
arvore.cpp:105:15: error: ‘struct Arvore<int>’ has no member named ‘vazio’
  105 |     REQUIRE(a.vazio() == false);
      |               ^~~~~
